# rust-nuxt-boilerplate

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog-exclude  LICENSE  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  playwright.config.ts  trufflehog.yaml  vitest.config.ts
backend/: .rustfmt.toml  Cargo.toml  Dockerfile  clippy.toml  docker-entrypoint.sh
backend/.cargo/: audit.toml
backend/locales/: en.json  es.json  pt-BR.json
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2026-04-21-024407_create_users/: down.sql  up.sql
backend/migrations/2026-04-21-024424_create_roles/: down.sql  up.sql
backend/migrations/2026-04-21-024431_create_users_roles/: down.sql  up.sql
backend/migrations/2026-04-21-024515_create_refresh_tokens/: down.sql
backend/migrations/2026-04-21-024531_create_profiles/: down.sql  up.sql
backend/migrations/2026-04-25-123747_create_audit_logs/: up.sql
backend/migrations/2026-05-09-010000_create_permissions/: up.sql
backend/migrations/2026-05-09-010001_create_roles_permissions/: down.sql  up.sql
backend/migrations/2026-07-16-180000_add_audit_log_hash_chain/: down.sql  up.sql
backend/src/: api_docs.rs  lib.rs  main.rs  test_utils.rs  traced_http.rs
backend/src/auth/: mod.rs  password.rs  password_test.rs  tokens.rs
backend/src/authz/: grants_extractor.rs  mod.rs  scope.rs
backend/src/config/: app_config.rs  mod.rs  telemetry.rs
backend/src/controllers/: audit_logs_controller.rs  auth_controller.rs  health_controller.rs  jwks_controller.rs  metrics_controller.rs  mod.rs  roles_controller.rs  upload_controller.rs  users_controller.rs
backend/src/db/: async_database.rs  database.rs  mod.rs  schema.rs
backend/src/errors/: app_error.rs  app_error_impl.rs  mod.rs
backend/src/middleware/: api_access_middleware.rs  api_key_middleware.rs  api_version.rs  auth.rs  auth_middleware.rs  csrf_protection.rs  metrics_middleware.rs  mod.rs  rate_limit_middleware.rs  request_id.rs  request_log_middleware.rs  require_role_middleware.rs  security_headers.rs  stripe_webhook_verifier.rs  test_authorities.rs
backend/src/models/: audit_log.rs  mod.rs  profile.rs  refresh_token.rs  role.rs  user.rs  user_role.rs
backend/src/repositories/: access_token_blacklist.rs  audit_logs_repository.rs  base.rs  container.rs  macros.rs  mod.rs  profiles_repository.rs  refresh_tokens_repository.rs  roles_repository.rs  test_repositories.rs  test_utils.rs  user_roles_repository.rs  users_repository.rs
backend/src/routes/: router.rs
backend/src/security/: blind_index.rs  encryption.rs  mod.rs  (+5 more)
backend/tests/: api_version_integration.rs  auth_integration.rs  csrf_protection_integration.rs  migration_rollback.rs
(+203 files in other folders)
