[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["GilcierWeb", "GilcierWeb <gilcierweb@gmail.com>"]
default-run = "backend"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[package.metadata.i18n]
available-locales = ["pt-BR", "en", "es"]
default-locale = "pt-BR"
load-path = "locales"

[profile.release]
lto = true
opt-level = 3   
panic = "abort"
strip = "symbols"
codegen-units = 1

[dependencies]
actix = "0.13"
actix-cors = "0.7.1"
actix-web = { version = "4.13.0", features = ["rustls-0_23"] }
actix-web-actors = "4.3"
actix-web-grants = "4.1.2"
actix-ws = "0.4.0"
# security crypto
argon2 = "0.5.3"
aes-gcm = "0.10"
digest = "0.10"
generic-array = "0.14"
hex = "0.4.3"
hmac = "0.12"
sha2 = "0.10"

async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
deadpool-redis = "0.23.0"
derive_more = { version = "2.0", features = ["display", "error"] }
diesel = { version = "2.3.7", features = ["postgres", "r2d2", "chrono", "uuid", "ipnet-address", "numeric", "64-column-tables", "serde_json"] }

jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8"
rand_core = "0.6"
redis              = { version = "1.2.0", features = ["tokio-comp", "connection-manager"] }
rust-i18n = "4.0.0"
ipnet = { version = "2.12", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.19", features = ["derive"] }
subtle = "2.5"

tokio = { version = "1.50.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

uuid = { version = "1.16", features = ["v4", "serde"] }
# -- Logging / Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-actix-web  = "0.7"
dotenvy = "0.15.7"
rustls = "0.23"
rustls-pemfile = "2"
futures-util = "0.3.32"

totp-rs = { version = "5", features = ["qr", "zeroize", "gen_secret"] }
# -- Rate Limiting
# Note: actix-governor is available but not currently used.
# The application uses a custom Redis-backed rate limiter (see middleware/rate_limit_middleware.rs)
# with explicit, configurable limits for different endpoint categories.
actix-governor = "0.10.0"
governor = "0.10.4"

utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
urlencoding = "2.1"
unicode-normalization = "0.1.25"
bigdecimal = { version = "0.4.10", features = ["serde"] }
rust_decimal = { version = "1.38", features = ["serde"] }

ammonia = "4.1.2"
faker-rust = "0.1.0"

[dev-dependencies]
actix-rt = "2.9"
mockall = "0.12"
claims = "0.7"
